--- a/reddit-clone/app/views/devise/registrations/new.html.erb
+++ b/reddit-clone/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,31 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |form| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  	<div class="form-group">
+      <%= form.label :email %>
+      <%= form.text_field :email, class: "form-control", :autofocus => true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+	  <div class="form-group">
+	  	<%= form.label :email %>
+	  	<%= form.email_field :email, autofocus: true, class: "form-control", required: true %>
+	  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+	  <div class="form-group">
+	  	<%= form.label :password %>
+	  	<%= form.password_field :password, class: "form-control", required: true %>
+	  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+	  <div class="form-group">
+	  	<%= form.label :password_confirmation %>
+	  	<%= form.password_field :password_confirmation, class: "form-control", required: true %>
+	  </div>
+
+	  <div class="form-group">
+	  	<%= form.submit "Sign up", class: "btn btn-lg btn-primary" %>
+	  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
