--- a/reddit-clone/app/views/devise/registrations/edit.html.erb
+++ b/reddit-clone/app/views/devise/registrations/edit.html.erb
@@ -9,8 +9,8 @@
       <div class="form-inputs">
 
       <div class="form-group">
-        <%= form.label :email %>
-        <%= form.text_field :email, class: "form-control", :autofocus => true %>
+        <%= form.label :name %>
+        <%= form.text_field :name, class: "form-control", :autofocus => true %>
       </div>
 
       <div class="form-group">
