--- a/reddit-clone/app/views/devise/registrations/new.html.erb
+++ b/reddit-clone/app/views/devise/registrations/new.html.erb
@@ -3,24 +3,29 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |form| %>
   <%= devise_error_messages! %>
 
-	  <div class="form-group">
-	  	<%= form.label :email %>
-	  	<%= form.email_field :email, autofocus: true, class: "form-control", required: true %>
-	  </div>
+  <div class="form-group">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "form-control", :autofocus => true %>
+  </div>
 
-	  <div class="form-group">
-	  	<%= form.label :password %>
-	  	<%= form.password_field :password, class: "form-control", required: true %>
-	  </div>
+  <div class="form-group">
+  	<%= form.label :email %>
+  	<%= form.email_field :email, autofocus: true, class: "form-control", required: true %>
+  </div>
 
-	  <div class="form-group">
-	  	<%= form.label :password_confirmation %>
-	  	<%= form.password_field :password_confirmation, class: "form-control", required: true %>
-	  </div>
+  <div class="form-group">
+  	<%= form.label :password %>
+  	<%= form.password_field :password, class: "form-control", required: true %>
+  </div>
 
-	  <div class="form-group">
-	  	<%= form.submit "Sign up", class: "btn btn-lg btn-primary" %>
-	  </div>
+  <div class="form-group">
+  	<%= form.label :password_confirmation %>
+  	<%= form.password_field :password_confirmation, class: "form-control", required: true %>
+  </div>
+
+  <div class="form-group">
+  	<%= form.submit "Sign up", class: "btn btn-lg btn-primary" %>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
