displaying only <24 hours and in range

--- a/bredTH/app/views/posts/index.html.erb
+++ b/bredTH/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing posts</h1>
+<%= @user_coords %>
 <%= link_to 'New post', new_post_path %>
-
 <table>
   <tr>
     <th>Text</th>
@@ -9,6 +9,8 @@
   <% @posts.each do |post| %>
     <tr>
       <td><%= post.text %></td>
+      <td><%= time_ago_in_words(post.created_at, include_seconds: true) %></td>
+      <td>(<%= post.latitude %>, <%= post.longitude %>)</td>
       <td><%= link_to 'Show', post_path(post) %></td>
       <td><%= link_to 'Edit', edit_post_path(post) %></td>
       <td><%= link_to 'Destroy', post_path(post),
