--- a/bredTH/app/views/posts/show.html.erb
+++ b/bredTH/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
 <p>
   <strong>Text:</strong>
   <%= @post.text %>
+  <!-- <%= @post.latitude %>
+  <%= @post.longitude %> -->
 </p>
 
 <h2>Comments</h2>
